Respect EXIF rotation information on loading an image

BUG: 252003
FIXED-IN: 16.12